# Ironman-Suit-Simulation

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  requirements.txt  start_aerodynamics_backend.py  start_simulation.py  start_unity_backend.py  test_environment.py  test_simulation.py
IronManSuitSim3D/: .gitignore
IronManSuitSim3D/Assets/Animations/UI/: AlertAnimations.cs  DataVisualizationAnimations.cs  HUDAnimations.cs  HolographicEffects.cs  (+5 more)
IronManSuitSim3D/Assets/Configuration/: README.md
IronManSuitSim3D/Assets/Documentation/: README.md
IronManSuitSim3D/Assets/Models/: README.md
IronManSuitSim3D/Assets/Scripts/: README.md
IronManSuitSim3D/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
IronManSuitSim3D/Assets/VFX/: README.md
IronManSuitSim3D/ProjectSettings/: ProjectSettings.asset
IronSuitSim3D/: .gitignore  GIT_CLEANUP_SUMMARY.md
IronSuitSim3D/Assets/: New Material.mat
IronSuitSim3D/Assets/Scenes/: New Material.mat
IronSuitSim3D/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
IronSuitSim3D/GeneratedAssets/7da5b27ee5eb74beeb2c72ffdd56ae27/: 019859b7-acf6-7cc5-a409-0615614c18f0_Preview.png.json
IronSuitSim3D/GeneratedAssets/95bcb902e3c50448c928a3acf4f6f489/: 019859bc-bf36-791e-954a-9400d407a739_Preview.png.json
IronSuitSim3D/ProjectSettings/: ProjectSettings.asset
backend/: requirements.txt
backend/adaptive_ai/: __init__.py  advanced_decision_making.py  advanced_neural_architectures.py  advanced_reinforcement_learning.py  ai_system.py  ai_system_integration.py  behavioral_adaptation.py  cognitive_load.py  meta_learning.py  neural_evolution.py  predictive_analytics.py  reinforcement_learning.py  tactical_decision.py
backend/adaptive_ai/tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  run_tests.py  test_ai_system.py  test_behavioral_adaptation.py  test_cognitive_load.py  test_integration.py  test_predictive_analytics.py  test_reinforcement_learning.py  test_tactical_decision.py
backend/aerodynamics/: REVIEW_REPORT.md  __init__.py  pytest.ini
backend/aerodynamics/api/: main.py  requirements.txt
backend/aerodynamics/config/: controls.yaml
backend/aerodynamics/control/: __init__.py  actuator.py  autopilot.py  controller.py  guidance.py  run_control.py  sensor.py
backend/aerodynamics/docs/: control.md
backend/aerodynamics/environmental_effects/: __init__.py  atmospheric_density.py  stability_control.py  thermal_effects.py  wind_interaction.py
backend/aerodynamics/flight_models/: README.md  __init__.py  aerodynamic_forces.py  flight_dynamics.py  stability_control.py  thrust_and_propulsion.py
backend/aerodynamics/physics_plugin/: CMakeLists.txt  README.md  REVIEW_REPORT.md
backend/aerodynamics/physics_plugin/build 12/: CTestTestfile.cmake  test_actuator  test_turbulence_model
backend/aerodynamics/physics_plugin/build 12/include/: aerodynamics_physics_plugin_config.h
backend/aerodynamics/physics_plugin/cmake/: Config.cmake.in  aerodynamics_physics_plugin.pc.in  aerodynamics_physics_plugin_config.h.in
backend/aerodynamics/physics_plugin/examples/: CMakeLists.txt  README.md  full_pipeline_example.c  vtk_demo.py
backend/aerodynamics/physics_plugin/examples/build 3/: Makefile
backend/aerodynamics/physics_plugin/include/aerodynamics/: actuator.h  bindings.h  flow_state.h  mesh.h  solver.h  turbulence_model.h  vtk_writer.h
backend/aerodynamics/physics_plugin/python/: README.md  bindings.py  bindings_improved.py  command_executor.py  test_command_executor.py
backend/aerodynamics/physics_plugin/python/integration_tests/: test_full_pipeline.py
backend/aerodynamics/physics_plugin/scripts/: enable_openmp_macos.sh  fix_eof.sh
backend/aerodynamics/physics_plugin/src/aerodynamics/: actuator.c  bindings.c  flow_state.c  mesh.c  solver.c  turbulence_model.c  vtk_writer.c
backend/aerodynamics/physics_plugin/tests/aerodynamics/: README.md  test_actuator.c  test_bindings.c  test_flow_state.c  test_mesh.c  test_solver.c  test_turbulence_model.c
backend/aerodynamics/physics_plugin/tests/integration/: README.md  test_full_pipeline.c
backend/aerodynamics/simulations/: run_simulation.py
backend/aerodynamics/tests/: conftest.py  test_integration.py
backend/aerodynamics/utils/: __init__.py  constants.py  conversions.py  decorators.py
backend/api/: aerodynamics.py  aerodynamics_bridge.py  computer_vision.py  unity_bridge.py
backend/ar_vr_integration/: README.md  __init__.py  ar_overlays.py  augmented_hud.py  core.py  eye_tracking.py  gesture_recognition.py  holographic_display.py  spatial_tracking.py  virtual_interface.py  vr_training.py
backend/ar_vr_integration/tests/: __init__.py  conftest.py  test_augmented_hud.py  test_core.py  test_gesture_recognition.py  test_virtual_interface.py
backend/autopilot/: README.md  __init__.py  neural_controller.py  waypoint_planner.py
backend/computer_vision/: README.md  __init__.py  camera_model.py  feature_tracker.py  object_detector.py  stream_client.py  utils.py
backend/jarvis/: command_executor.py
devops/: Dockerfile
frontend/: QUICKSTART.md  README.md  build-webgl.sh  package-lock.json  package.json  server.js
frontend/IronManExperience/: README.md  index.html  test-3d-bright.html  test-3d.html
frontend/IronManExperience/css/: animations.css  hud.css  jarvis-advanced.css  jarvis.css  main.css  viewport.css
frontend/IronManExperience/js/: audio-fix.js  audio.js  boot-particles.js  boot-sequence.js  environment-cinematic.js  hud.js  jarvis-advanced.js  jarvis.js  lighting-cinematic.js  lighting-enhanced.js  lighting-fix.js  lighting-simple.js  main.js  materials-pbr.js  materials-simple.js  missions.js  post-processing.js  suit-builder.js  suit-simple.js  suit-ultimate-realistic.js  suit-ultra-realistic.js  three-modules.js  three.min.js  utils.js  viewport-debug.js  viewport-enhanced.js  viewport-showcase.js  viewport-ultimate.js  viewport-ultra.js  viewport.js
scripts/: setup_env.sh
simulation/unity_simulation_ui/: UNITY_SETUP.md
simulation/unity_simulation_ui/Iron-Man-Suit-Simulation/: .gitignore
(+61 files in other folders)
